# chipa-license-validator

./: .gitignore  Cargo.toml  chipa_license_validator.pyi  index.d.ts  index.js  package.json  pyproject.toml  test_complex.chipa  test_types.chipa  users.json
.github/workflows/: CI.yml
chipa/: test_compound_types.chipa  test_enum.chipa  test_non_zero_types.chipa  test_primitive.chipa  test_standard_types.chipa  test_struct.chipa
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: client.rs  encryption.rs  lib.rs  stubgen.rs
