[package]
edition = "2021"
name = "chipa_license_validator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stubgen"
path = "src/stubgen.rs"


[features]
js = ["dep:napi", "dep:napi-derive"]
py = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pyo3-stub-gen"]

[dependencies]
tenacity-utils = { git = "https://github.com/Rick-29/tenacity-crates.git", version = "0.1.0", features = ["wasm"]}
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
anyhow = "1.0.97"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "2.12.2", optional = true}
pyo3 = { version = "0.24.1", features = ["experimental-async", "extension-module"], optional = true}
pyo3-async-runtimes = { version = "0.24.0", features = ["tokio-runtime"], optional = true}
pyo3-stub-gen = { version = "0.7.0", optional = true }
reqwest-wasm = "0.11.16"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
uuid = "1.16.0"
bincode = "=2.0.0-rc.3"
bytes = { version = "1.10.1", features = ["serde"] }

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
