[package]
edition = "2021"
name = "chipa_license_validator"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "stubgen"
path = "src/stubgen.rs"


[features]
default = ["py"]
js = ["dep:napi", "dep:napi-derive"]
py = ["dep:pyo3", "dep:pyo3-async-runtimes", "dep:pyo3-stub-gen"]

[dependencies]
tenacity-utils = { git = "https://github.com/Rick-29/tenacity-crates.git", version = "0.1.0", features = ["wasm"]}
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
anyhow = "1.0.80"
napi = { version = "2.12.2", default-features = false, features = ["napi4", "tokio_rt"], optional = true }
napi-derive = { version = "2.12.2", optional = true}
pyo3 = { version = "0.21.0", features = ["experimental-async", "extension-module"], optional = true}
pyo3-async-runtimes = { version = "0.21.0", features = ["tokio-runtime"], optional = true}
pyo3-stub-gen = { version = "0.6.0", optional = true }
reqwest-wasm = "0.11.16"
serde = { version = "1.0.180", features = ["derive"] }
serde_json = "1.0.100"
thiserror = "1.0.50"
uuid = "1.6.0"
bincode = "1.3.3"
bytes = { version = "1.5.0", features = ["serde"] }
rmpv = { version = "1.0.0", features = ["with-serde"] }
rmp-serde = "1.1.0"
pythonize = "0.21.0"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
